# gtest_practice

./: .gitignore  CMakeLists.txt  README.md
includes/: myMathLib.h
src/: myMathLib.cpp
tests/: CMakeLists.txt  test_add.cpp  test_array.cpp
